--- a/player.html
+++ b/player.html
@@ -19,22 +19,22 @@
 </head>
 <body>
         
-    <!-- <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
+    <div class="card text-white bg-success mb-3" style="max-width: 400px;">
       <div class="row no-gutters">
-        <div class="col-md-4">
-          <img src="ronaldo.jpg" class="card-img" style="width: 20rem; height: 20rem"  alt="">
+        <!-- <div class="col-md-4"> -->
+          <img src="ronaldo.jpg" style="width:400px; height: 370px"  alt="" class="img-thumbnail">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">RONALDO</h5>
-            <p class="card-text">. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <a href="https://vi.wikipedia.org/wiki/Cristiano_Ronaldo" class="btn btn-primary">Tìm hiểu chi tiết</a>
+            <p class="text-center">CRISTIANO RONALDO</p>
+            <!-- <p class="card-text">. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+            <!-- <a href="https://vi.wikipedia.org/wiki/Cristiano_Ronaldo" class="btn btn-primary">hf</a> -->
           </div>
         </div>
       </div>
-    </div> -->
-    <div class="card text-white bg-success mb-3" style="max-width: 540px;">
+    </div>
+    <!-- <div class="card text-white bg-success mb-3" style="max-width: 540px;">
         <div class="row no-gutters">
             <div class="col-md-4">
                 <img src="ronaldo.jpg" class="card-img"   alt="">
@@ -42,13 +42,13 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">RONALDO</h5>
-                  <p class="card-text">. This content is a little bit longer.</p>
+                  <p class="card-text">Em trai ruột của Nguyễn Quốc Trung.</p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   <a href="https://vi.wikipedia.org/wiki/Cristiano_Ronaldo" class="btn btn-primary">Tìm hiểu chi tiết</a>
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           
 </body>
 </html>
